--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  ><head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Venture | LINE OGP Test</title>
@@ -150,7 +150,26 @@
     ></script>
   </head>
   <body>
-    <div id="__next"></div>
+    <div id="__next">
+      <div
+        class="line-it-button"
+        data-lang="en"
+        data-type="share-a"
+        data-env="REAL"
+        data-url="https://developers.line.biz/en/docs/line-social-plugins/install-guide/using-line-share-buttons/"
+        data-color="default"
+        data-size="large"
+        data-count="false"
+        data-ver="3"
+        style="display: none"
+      ></div>
+    </div>
+    <script
+      src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js"
+      async="async"
+      defer="defer"
+    ></script>
+
     <script id="__NEXT_DATA__" type="application/json">
       {
         "props": {
