Reverted share URL

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         data-lang="en"
         data-type="share-a"
         data-env="REAL"
-        data-url="https://main.d2yxc9ct02bejl.amplifyapp.com/"
+        data-url="https://mimamulhassankhan.github.io/ogp-testing-with-sample-html/"
         data-color="default"
         data-size="large"
         data-count="false"
